Fix image and quote refrence alignment
The references are now approximately aligned with the right side of a
quote or image. Right now this required a couple of hacks and magic
numbers and therefore doesn't work in all cases.

This commit also adds a shadow CSS class for images to make the size of
an image more visible if it has no background color.

--- a/slides/styles.css
+++ b/slides/styles.css
@@ -8,9 +8,20 @@
 
 .reveal .reference {
   width: 70%;
+  padding: 5px;
   margin: 0 auto;
   font-size: large;
   text-align: end;
+}
+
+.reveal img.block-width {
+  width: 70%;
+  margin: var(--r-block-margin) auto;
+}
+
+.reveal img.shadow {
+  background-color: var(--r-background-color);
+  box-shadow: 2px 2px 10px darkgray;
 }
 
 .reveal .footnote {
